# bakerysense

./: .gitignore  LICENSE  README.md  pyproject.toml
bakerysense-web/: .gitignore  README.md  cloudflare-env.d.ts  drizzle.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.mts  vitest.unit.config.mts  worker-entry.ts  worker-test.js  wrangler.jsonc
data/: README.md
docs/: architecture.md  cloudflare-bootstrap.md  demo-harness.md  demo_transcript.md  deploy.md  submission-checklist.md  ucws-submission.md
kaggle-submission/: bakerysense.ipynb  kernel-metadata.json  writeup-for-kaggle.md
scripts/: Dockerfile.timesfm  benchmark_gift_eval.py  benchmark_kaggle_web_traffic.py  benchmark_m4_daily.py  benchmark_m5.py  benchmark_m5_blend.py  benchmark_m5_chronos.py  benchmark_m5_l11.py  benchmark_m5_l9.py  benchmark_m5_l9_dow.py  benchmark_m5_l9_naive.py  benchmark_m5_multilevel.py  benchmark_m5_multilevel_v2.py  benchmark_m5_topdown.py  benchmark_m5_uncertainty.py  benchmark_m5_uncertainty_v2.py  benchmark_m5_uncertainty_v3.py  benchmark_m5_uncertainty_v4.py  benchmark_m5_wrmsse.py  benchmark_nn5.py  benchmark_timesfm.py  benchmark_timesfm_covariates.py  benchmark_timesfm_residual.py  benchmark_v1_5.py  benchmark_vs_baselines.py  build_web_bundle.py  demo_agent.py  deploy-smoke.sh  deploy_modal.py  fetch_weather.py  generate_broll.py  m5_wrmsse.py  retrain_tenant.py  seed_demo_bundle.py  serve_timesfm.py  stitch_broll.sh  train_baseline.py
tests/: conftest.py  test_eval.py  test_export_trees.py  test_features.py  test_tools.py  (+4 more)
(+339 files in other folders)
