[project]
name = "bakerysense"
version = "0.1.0"
description = "Offline-first bakery production copilot — Gemma 4 Good Hackathon"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "BakerySense contributors" }]
keywords = ["gemma", "hackathon", "bakery", "forecasting", "agent", "newsvendor"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "holidays>=0.57",
    "pyarrow>=17.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
agent = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.24",
    "httpx>=0.27",
]
viz = [
    "matplotlib>=3.9",
    "streamlit>=1.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bakerysense"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
